--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "websdk",
-  "version": "1.0.0",
+  "version": "1.0.10",
   "description": "Fyno Web SDK",
   "repository": {
     "type": "git",
     "url": "https://gitlab.com/fyno-app/web-sdk.git"
   },
-  "main": "src/index.js",
+  "main": "dist/cjs_bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf dist && webpack --env module_type=commonjs --env filename=cjs_bundle.js  && webpack --env module_type=window --env filename=cdn_bundle.js"
+    "build": "rm -rf dist && webpack --env module_type=commonjs --env filename=cjs_bundle.js  && webpack --env module_type=window --env filename=cdn_bundle.js",
+    "publish_sdk": "npm run build && npm publish"
+  },
+  "types": "src/index.d.ts",
+  "publishConfig": {
+    "access": "public"
   },
   "keywords": [
     "fyno",
@@ -28,22 +33,5 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.1.0"
-  },
-  "dependencies": {
-    "fs": "^0.0.1-security",
-    "gulp": "^3.9.1",
-    "gulp-bump": "^3.2.0",
-    "gulp-clean": "^0.4.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-jshint": "^2.1.0",
-    "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.1.4",
-    "gulp-size": "^4.0.1",
-    "gulp-task-listing": "^1.1.1",
-    "gulp-uglify": "^3.0.2",
-    "gulp-util": "^3.0.8",
-    "jshint": "^2.13.6",
-    "jshint-stylish": "^2.2.1",
-    "run-sequence": "^2.2.1"
   }
 }
