--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.1.0"
+  },
+  "dependencies": {
+    "idb": "^8.0.0"
   }
 }
