--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fyno/websdk",
-  "version": "1.1.17",
+  "version": "2.0.0",
   "description": "Fyno Web SDK",
   "repository": {
     "type": "git",
@@ -38,6 +38,7 @@
     "webpack-cli": "^5.1.0"
   },
   "dependencies": {
+    "detectincognitojs": "^1.3.5",
     "idb": "^8.0.0"
   }
 }
