--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fyno/websdk",
-  "version": "2.0.5-beta-0",
+  "version": "2.0.5",
   "description": "Fyno Web SDK",
   "repository": {
     "type": "git",
